# earshot

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: backlog.md  development-workflow.md
docs/adr/: 0001-on-device-processing.md  0001-opus-as-primary-audio-format.md  0002-pyannote-for-diarization.md  0002-python-venv-over-docker.md  0003-hardware-abstraction-layer.md  0003-whisper-for-transcription.md  0004-mp3-as-primary-audio-format.md  0004-opus-as-primary-audio-format.md  0004-systemd-for-service-management.md  0005-local-only-no-api-sync.md  0005-offline-first-with-api-sync.md  0006-filesystem-as-state.md  0006-python-venv-over-docker.md  0007-chunked-recording.md  0007-hardware-abstraction-layer.md  0008-systemd-for-service-management.md  0008-whisplay-hat-support.md  0009-ascii-art-display.md  0009-sqlite-as-central-state-store.md  0010-local-only-no-api-sync.md  0010-on-device-transcription.md  0011-filesystem-as-state.md  0012-chunked-recording.md  0013-whisplay-hat-support.md  0014-ascii-art-display.md  README.md
docs/requirements/: README.md  api-sync.md  configuration.md  connectivity.md  device-state.md  display.md  hardware.md  install.md  non-functional.md  open-questions.md  processing.md  recording.md  storage.md  transcription.md
earshot/: __init__.py  __main__.py  app.py  config.py  status.py  usb_offload.py
earshot/hal/: __init__.py  animator.py  bundle.py  effects.py  pi.py  protocols.py  stub.py  whisplay.py
earshot/processing/: __init__.py  pipeline.py
earshot/recording/: __init__.py  encode.py  wav_file.py
earshot/storage/: __init__.py  db.py  disk.py  paths.py
earshot/sync/: __init__.py  client.py
earshot/transcription/: __init__.py  process.py  queue.py  writer.py
installer/: earshot-install.sh  earshot.service.template  install.sh  requirements.txt
memory/: feedback_branching.md
releases/: v0.2.0.md
tests/: test_connectivity.py  test_recording.py  test_transcription_process.py  test_transcription_queue.py  test_transcription_writer.py  test_usb_offload.py
