[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "earshot"
version = "0.1.0"
description = "Local audio recorder for Raspberry Pi — captures and encodes conversations for USB offload"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli-w",
]

[project.optional-dependencies]
# Raspberry Pi: ReSpeaker capture, APA102 LED, GPIO button (see ADR 0007).
pi = [
    "pyaudio",
    "apa102-pi",
    "RPi.GPIO",
    "spidev",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["earshot*"]
