[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "earshot"
version = "0.1.0"
description = "Local audio recorder for Raspberry Pi — captures and encodes conversations for USB offload"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "tomli-w",
]

[project.optional-dependencies]
# Raspberry Pi: audio capture, LEDs, GPIO button, display (see ADR 0007, 0013, 0014).
pi = [
    "pyaudio",
    "apa102-pi",
    "RPi.GPIO",
    "gpiozero",
    "spidev",
    "luma.lcd",
]
dev = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["earshot*"]
